--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 
   <!-- Icons -->
   <link rel="icon" href="icons/checklist.png" />
+  <link rel="stylesheet" href="/app.css" />
 </head>
 
 <body>
@@ -28,6 +29,6 @@
   </main>
 
   <!-- SW Register -->
-  <script type="module" src="/src/sw-register.js"></script>
+  <script type="module" src="/sw-register.js"></script>
 </body>
 </html>
