--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,15 @@
   <title>Story App - Berbagi Cerita</title>
 
   <!-- Manifest for PWA -->
-  <link rel="manifest" href="manifest.webmanifest" />
+  <link rel="manifest" href="./manifest.webmanifest" />
   <meta name="theme-color" content="#ffffff" />
 
-  <link rel="apple-touch-icon" href="icons/book.png" />
+  <link rel="apple-touch-icon" href="./icons/book.png" />
   <meta name="application-name" content="Story App" />
 
   <!-- Icons -->
-  <link rel="icon" href="icons/checklist.png" />
-  <link rel="stylesheet" href="/app.css" />
+  <link rel="icon" href="./icons/checklist.png" />
+  <link rel="stylesheet" href="./app.css" />
 </head>
 
 <body>
@@ -29,6 +29,6 @@
   </main>
 
   <!-- SW Register -->
-  <script type="module" src="/sw-register.js"></script>
+  <script type="module" src="./sw-register.js"></script>
 </body>
 </html>
